More reliable MimeType detection for music formats.

Patch by Rafał Rzepecki <divided.mind@gmail.com>.

BUG: 219792